[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Creatures/CreatureWalking.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Creatures/CreatureStriking.gd" type="Script" id=2]
[ext_resource path="res://src/BoxColliders/PlayerDetector.tscn" type="PackedScene" id=3]

[node name="CreatureStriking" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="StrikeTimer" type="Timer" parent="." index="10"]

[node name="PlayerDetector" parent="." index="11" instance=ExtResource( 3 )]
[connection signal="timeout" from="StrikeTimer" to="." method="_on_StrikeTimer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
